# uiuc-datathon-2026

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_preprocess.ipynb  02_eda.ipynb  03_forecast_model.ipynb  04_results.ipynb
output/: forecast_baseline.csv  forecast_final.csv  submission_final.csv
src/: data.py  features.py  forecast.py  intraday_model.py  sarimax_model.py
