[project]
name = "uiuc-datathon-2026"
version = "0.1.0"
description = "uiuc datathon 2026"
requires-python = ">=3.12"
dependencies = [
    "holidays>=0.93",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pypdf2>=3.0.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
]

[tool.setuptools]
packages = ["src"]
